@@ -1141,8 +1141,8 @@
                               <widget class="GtkButton" id="wp_add_button">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="label" translatable="yes">gtk-add</property>
-                                <property name="use_stock">True</property>
+                                <property name="label" translatable="yes">_Add...</property>
+                                <property name="use_underline">True</property>
                               </widget>
                               <packing>
                                 <property name="expand">False</property>
