@@ -1,3 +1,9 @@
+2007-05-07  Denis Washington  <denisw@svn.nome.org>
+
+	* appearance.glade:
+	* appearance-desktop.c: (desktop_init):
+	Changed "Add" button in Desktop tab to "Add...".
+
 2007-05-07  Thomas Wood  <thos@gnome.org>
 
 	* appearance-main.c: (main):
